--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Best Gym Recipes</h1>
+    <img src="./images/moussaka.jpeg" alt="moussaka">
     <a href="./moussaka.html">Moussaka</a>
-    <h2>This moussaka tastes great! Layers of sliced eggplant are baked in a ground beef sauce and smothered in a creamy white béchamel sauce in this classic Greek dish.</h2>
+    
 </body>
 </html>
