--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -8,7 +8,7 @@
 <body>
     <a href="./index.html">Back</a>
     <h1>Moussaka</h1>
-    <img src="./images/moussaka.jpeg" alt="Moussaka dish">
+    <img src="../images/moussaka.jpeg" alt="Moussaka dish">
     <h2>This moussaka tastes great! Layers of sliced eggplant are baked in a ground beef sauce and smothered in a creamy white béchamel sauce in this classic Greek dish.</h2>
     <h3>Ingredients</h3>
     <ul>
