--- a/recipes/tortilla.html
+++ b/recipes/tortilla.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html">Back</a>
+    <a href="../index.html">Back</a>
     <h1>Tortilla Scrambled Egg and Cheese</h1>
-    <img src="./images/tortilla.webp" alt="tortilla">
+    <img src="../images/tortilla.webp" alt="tortilla">
     <h2>A crispy tortilla, scrambled egg, and cheese–sounds like breakfast pizza to me!</h2>
     <h3>Ingredients</h3>
     <ul>
