--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
     <h1>Best Gym Recipes</h1>
     <img src="./images/moussaka.jpeg" alt="moussaka">
-    <a href="./moussaka.html">Moussaka</a>
-    
+    <a href="./recipes/moussaka.html">Moussaka</a>
+    <img src="./images/spicy.webp" alt="spicy">
+    <a href="./recipes/spicy.html">Chicken Spicy Wings</a>
+    <img src="./images/pork.jpg" alt="pork">
+    <a href="./recipes/pork.html">Roasted Pork Loin</a>
+    <img src="./images/tortilla.webp" alt="tortilla">
+    <a href="./recipes/tortilla.html">Tortilla</a>
 </body>
 </html>
