--- a/recipes/pork.html
+++ b/recipes/pork.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./index.html">Back</a>
+    <a href="../index.html">Back</a>
     <h1>Roasted Pork Loin</h1>
     <img src="./images/pork.jpg" alt="pork">
     <h2>Succulent pork loin with fragrant garlic, rosemary, and wine.</h2>
