--- a/recipes/pork.html
+++ b/recipes/pork.html
@@ -8,7 +8,7 @@
 <body>
     <a href="../index.html">Back</a>
     <h1>Roasted Pork Loin</h1>
-    <img src="./images/pork.jpg" alt="pork">
+    <img src="../images/pork.jpg" alt="pork">
     <h2>Succulent pork loin with fragrant garlic, rosemary, and wine.</h2>
     <h3>Ingredients</h3>
     <ul>
