--- a/recipes/spicy.html
+++ b/recipes/spicy.html
@@ -6,8 +6,9 @@
     <title></title>
 </head>
 <body>
+    <a href="../index.html">Back</a>
     <h1>Chicken Spicy Wings</h1>
-    <img src="./images/spicy.webp" alt="chicken">
+    <img src="../images/spicy.webp" alt="chicken">
     <h2>I promise you that this is no gimmick. The spicy, sticky, and peanut-based sauce base delivers a distinct chicken wing-eating experience. If you're a fan of satay, you will enjoy this approach.</h2>
     <h3>Ingredients</h3>
     <ul>
