--- a/index.html
+++ b/index.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Gym Recipes</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Best Gym Recipes</h1>
-    <img src="./images/moussaka.jpeg" alt="moussaka">
-    <a href="./recipes/moussaka.html">Moussaka</a>
-    <img src="./images/spicy.webp" alt="spicy">
-    <a href="./recipes/spicy.html">Chicken Spicy Wings</a>
-    <img src="./images/pork.jpg" alt="pork">
-    <a href="./recipes/pork.html">Roasted Pork Loin</a>
-    <img src="./images/tortilla.webp" alt="tortilla">
-    <a href="./recipes/tortilla.html">Tortilla</a>
+    <div class="recipe one">
+        <img src="./images/moussaka.jpeg" alt="moussaka">
+        <a href="./recipes/moussaka.html">Moussaka</a>
+    </div>
+    <div class="recipe two">
+        <img src="./images/spicy.webp" alt="spicy">
+        <a href="./recipes/spicy.html">Chicken Spicy Wings</a>
+    </div>
+    <div class="recipe three">
+        <img src="./images/pork.jpg" alt="pork">
+        <a href="./recipes/pork.html">Roasted Pork Loin</a>
+    </div>
+    
+    <div class="recipe four">
+        <img src="./images/tortilla.webp" alt="tortilla">
+        <a href="./recipes/tortilla.html">Tortilla</a>
+    </div>
+    
 </body>
 </html>
